--- a/css/styles.css
+++ b/css/styles.css
@@ -37,10 +37,9 @@ a:hover{
 .logo{
     background-image: url(../img/logo/undraw_happy_music_g6wc.svg);
     background-size: cover;
-    margin-left: 70px;
+    margin: auto;
+    width: 60%;
     height: 270px;
-    width: 300px;
-
 }
 
 #checkbox-container, #recupera-password{
@@ -58,7 +57,29 @@ a:hover{
 }
 
 
-@media (min-width: 576px) {
+@media (min-width: 576px) and (max-width: 767px) {
+
+    .logo{
+        background-image: url(../img/logo/undraw_happy_music_g6wc.svg);
+        background-size: cover;
+        margin: auto;
+        width: 70%;
+        height: 300px;
+
+    }
+
+}
+
+@media (max-width: 575px) {
+
+    .logo{
+        background-image: url(../img/logo/undraw_happy_music_g6wc.svg);
+        background-size: cover;
+        margin: auto;
+        width: 100%;
+        height: 350px;
+
+    }
 
 }
 
