--- a/css/styles.css
+++ b/css/styles.css
@@ -76,8 +76,8 @@ a:hover{
         background-image: url(../img/logo/undraw_happy_music_g6wc.svg);
         background-size: cover;
         margin: auto;
-        width: 100%;
-        height: 350px;
+        width: 170px;
+        height: 100px;
 
     }
 
